Back button & Cancel button
Added Back button in the action bar
Added Cancel button in New contact page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
 
     <string name="hint_word">Word...</string>
     <string name="button_save">Save</string>
+    <string name="button_cancel">Cancel</string>
     <string name="empty_not_saved">Contact not saved. Please check if Name and Number field is not empty. </string>
 
     <string name="clear_all_data">Delete all records.</string>
